<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">N Men\'s Morris</string>
    <string name="ok" translatable="false">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="your_turn">It\'s your turn!</string>
    <string name="bots_turn">It\'s the Bot\'s turn!</string>
    <string name="white_turn">It\'s White\'s turn!</string>
    <string name="black_turn">It\'s Black\'s turn!</string>
    <string name="select_millVariant">Mill Variant:</string>
    <string name="select_player_black">Select Player Black:</string>
    <string name="select_player_white">Select Player White:</string>
    <string name="select_whoStarts">Who Starts?</string>
    <string name="clicking_in_botvsbot">Both Players are Bots!</string>
    <string name="remis_title" translatable="false">Remis</string>
    <string name="remis_message">Remis! No Player could close a mill since %1$d moves. Do you want to continue?</string>
    <string name="start_new_game">Start New Game</string>
    <string name="start_game">Start Game!</string>
    <string name="want_to_start_new_game">Do you want to start a new Game?</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="five_mens_morris">Five Men\'s Morris</string>
    <string name="seven_mens_morris">Seven Men\'s Morris</string>
    <string name="nine_mens_morris">Nine Men\'s Morris</string>
    <string name="want_to_quit">Do you really want to quit?</string>
    <string name="quit_game">Quit Game</string>
    <string name="options">Options</string>
    <string name="what_do">What do you want to do?</string>
    <string name="cancel">Cancel</string>
    <string name="human_player">Human Player</string>
    <string name="EASY">Easy</string>
    <string name="NORMAL">Normal</string>
    <string name="HARD">Hard</string>
    <string name="HARDER">Harder</string>
    <string name="HARDEST">Hardest</string>
    <string name="you_have_won">You have won!</string>
    <string name="has_won">has won!</string>
    <string name="won_no_moves_bot">His opponent can not make any further move!</string>
    <string name="won_no_pieces_bot">His opponent only has two pieces left!</string>
    <string name="show_gameboard">Show Gameboard</string>
    <string name="pos_occupied">This Position is occupied!</string>
    <string name="nothing_to_move">Nothing to move here. Click on one of your pieces!</string>
    <string name="can_not_move">You can not move to this Position. Choose another one!</string>
    <string name="not_your_turn">It is not your turn!</string>
    <string name="nothing_to_kill">Nothing to kill here. Choose a piece from your opponent!</string>
    <string name="cannot_kill_mill">You can not kill a mill. Choose another target!</string>
    <string name="turn_of">Turn of</string>
    <string name="won_no_moves_human">Your opponent can not make any further move!</string>
    <string name="won_no_pieces_human">Your opponent only has two pieces left!</string>
    <string name="EASIEST">Easiest</string>
    <string name="you_have_lost">You have lost!</string>
    <string name="lost_no_moves">You can not make any further move!</string>
    <string name="lost_no_pieces">You only have two pieces left!</string>
    <string name="ADVANCED">Advanced</string>
    <string name="EASIER">Easier</string>
    <string name="game_is_over">The Game is over!</string>
</resources>