<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_options">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size"
            android:layout_marginLeft="@dimen/margin_size"
            android:text="@string/select_millVariant"
            android:textSize="@dimen/text_size" />

    <Spinner
        android:id="@+id/millModeSpinner"
        android:prompt="@string/select_millVariant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_size"
        android:layout_marginRight="@dimen/margin_size"/>
    
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size"
            android:layout_marginLeft="@dimen/margin_size"
            android:text="@string/select_player_white"
            android:textSize="@dimen/text_size" />

    <Spinner
        android:id="@+id/playerWhiteSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_size"
        android:layout_marginRight="@dimen/margin_size"/>
    
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size"
            android:layout_marginLeft="@dimen/margin_size"
            android:text="@string/select_player_black"
            android:textSize="@dimen/text_size" />

    <Spinner
        android:id="@+id/playerBlackSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_size"
        android:layout_marginRight="@dimen/margin_size"/>
    
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size"
            android:layout_marginLeft="@dimen/margin_size"
            android:text="@string/select_whoStarts"
            android:textSize="@dimen/text_size" />

    <Spinner
        android:id="@+id/whoStartsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_size"
        android:layout_marginRight="@dimen/margin_size"/>

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size"
        android:layout_marginLeft="@dimen/margin_size"
        android:layout_marginRight="@dimen/margin_size"
        android:gravity="center_horizontal"
        android:textSize="@dimen/text_size"
        android:text="@string/start_game" />
    
</LinearLayout>
</ScrollView>